# bauplan-commit-browser

./: .env.example  .gitignore  CLAUDE.md  README.md
backend/: .env.example  README.md  pyproject.toml
backend/app/: main.py
frontend/: package-lock.json  package.json  webpack.config.js
frontend/src/: App.tsx  index.html  index.tsx  types.ts
frontend/src/api/: bauplanApi.ts
frontend/src/components/: BranchSelector.tsx  CommitItem.tsx  CommitList.tsx  FilterBar.tsx  Header.tsx  Sidebar.tsx
frontend/src/styles/: global.css  theme.css
