[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bauplan-commit-browser"
version = "0.1.0"
description = "Backend for Bauplan commit browser"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.12",
    "uvicorn>=0.34.2",
    "python-dotenv>=1.1.0",
    "httpx>=0.27.0",
    "bauplan>=0.0.3a378",
    "pydantic>=2.11.4",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.black]
line-length = 88

[tool.isort]
profile = "black"